# llm_agents

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  SPEC.md  main.py  pyproject.toml
.claude/: settings.local.json
.claude/agents/: api-designer.md  code-reviewer.md  database-designer.md  devops-engineer.md  qa-engineer.md  quality-guard.md  security-specialist.md  senior-engineer.md  systems-architect.md  technical-writer.md
.claude/skills/: validate.md
.claude/skills/run-app/: SKILL.md
.claude/skills/run-cli/: SKILL.md
1_foundations/lab1/: start.py
1_foundations/lab2/: README.md  display.py  judge.py  main.py  providers.py
1_foundations/lab2/.claude/: settings.local.json
1_foundations/lab3/: AGENT.md  main.py
1_foundations/lab3/me/: fake_cv.md
arena/: __init__.py  config.py  display.py  judge.py  providers.py
desilvaware/best_answer/: README.md  app.py  judge.py  main.py  providers.py
desilvaware/dsa_tester/: CLAUDE.md  db.py  elo.py  models.py  question_gen.py  runner.py  server.py
desilvaware/dsa_tester/frontend/: index.html  package.json  vite.config.ts
desilvaware/dsa_tester/frontend/src/: App.tsx  api.ts  main.tsx  types.ts
desilvaware/dsa_tester/frontend/src/components/: CodeEditor.tsx  EloCard.tsx  ExplanationInput.tsx  HistoryTable.tsx  LanguageSelector.tsx  QuestionPanel.tsx  TestResultsPanel.tsx  TimerBar.tsx
tests/: conftest.py  test_judge.py  test_providers.py
tests/dsa_tester/: test_elo.py  test_runner.py
