[project]
name = "llm-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.76.0",
    "gradio>=6.5.1",
    "langchain>=1.2.6",
    "openai>=2.15.0",
    "pyppeteer>=2.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
]
